Added Style Bakery Page

--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -4,6 +4,7 @@
 
 $background-color: #3d0b00;
 $body-color: #73473d;
+$body-border-color: #3d0b00;
 $text-color: #fff;
 $font-stack: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
