--- a/scss/layout/_products.scss
+++ b/scss/layout/_products.scss
@@ -1,4 +1,5 @@
-.bakery {
+.bakery,
+.drinks {
   width: 100%;
   padding: 1em;
 
@@ -19,13 +20,16 @@
 
   &__name {
     text-align: center;
-    padding-top: 0.3em;
+    padding: 0 1em;
+    padding-top: 0.1em;
     font-weight: bold;
+    font-size: 1.2em;
   }
 
   &__description {
     padding: 0 1em;
-    margin-bottom: 0.5em;
+    margin-bottom: 0em;
+    font-size: 0.9rem;
   }
 
   &__row {
@@ -39,5 +43,10 @@
 
   &__cart {
     font-size: 2rem;
+    color: rgb(228, 228, 85);
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
