Added contact page styling

--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -19,7 +19,8 @@ $menu-font-size: 1.05rem;
 
 $contact-font-stack: 'Bree Serif', serif;
 $contact-field-color: #ececec;
-$contact-value-color: #8f8f33;
+$contact-value-color: #b3b35a;
+$contact-placeholder-color: #b3b35a7e;
 
 $footer-color: #886767;
 $footer-message-size: 1.2rem;
