--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding-top: 3em;
+  padding-top: 1.5em;
   width: 75%;
   margin: 0 auto;
 
@@ -8,11 +8,12 @@
     color: $footer-color;
     font-family: $font-stack;
     font-weight: 800;
-    margin-bottom: 1em;
+    margin-bottom: 0.8em;
   }
 
   &__socialmedia {
-    width: 20%;
+    width: 180px;
+    margin-bottom: 1.5em;
   }
 
   &__in,
@@ -20,5 +21,37 @@
   &__tw {
     font-size: $social-media-size;
     color: $footer-color;
+  }
+}
+
+/********************************************/
+/*              MEDIA QUERIES               */
+/********************************************/
+
+@include mediaSm {
+  .footer {
+    &__socialmedia {
+      width: 170px;
+    }
+
+    &__in,
+    &__fb,
+    &__tw {
+      font-size: 2.3rem;
+    }
+  }
+}
+
+@include mediaXs {
+  .footer {
+    &__socialmedia {
+      width: 140px;
+    }
+
+    &__in,
+    &__fb,
+    &__tw {
+      font-size: 2.1rem;
+    }
   }
 }
