--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,3 +7,19 @@
     margin: 0 auto;
   }
 }
+
+/********************************************/
+/*              MEDIA QUERIES               */
+/********************************************/
+
+@include mediaLg {
+  .home__carousel img {
+    height: 450px !important;
+  }
+}
+
+@include mediaMd {
+  .home__carousel img {
+    height: 300px !important;
+  }
+}
