--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5em;
+  padding: 2.6em 1.5em 1.5em;
 
   &__nav {
     display: flex;
@@ -54,10 +54,6 @@
 /********************************************/
 
 @include mediaLg {
-  .header {
-    padding: 1.8em;
-  }
-
   .bakery,
   .drinks {
     grid-template-columns: repeat(3, auto);
