--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -69,7 +69,21 @@
 /********************************************/
 
 @include mediaSm {
-  .contact__send {
-    width: 100%;
+  .contact {
+    &__title {
+      font-size: 1.9rem;
+      font-family: $contact-font-stack;
+    }
+
+    &__description {
+      font-size: 1.2rem;
+      font-family: $font-stack;
+      letter-spacing: 1px;
+      margin-bottom: 1.8em;
+    }
+
+    &__send {
+      width: 100%;
+    }
   }
 }
