Add top margin menu & top padding header in mobile

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -68,6 +68,10 @@
 }
 
 @include mediaSm {
+  .header {
+    padding-top: 1.5em;
+  }
+
   .bakery,
   .drinks {
     grid-template-columns: repeat(1, auto);
