Add Checkout Page and behaviour

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -59,7 +59,7 @@
 
   &__counter {
     &::after {
-      content: '0';
+      content: attr(data-value);
       color: $text-color;
       font-size: 1.2rem;
       text-align: center;
