Fix home carousel size and style

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,9 +1,11 @@
 .home__carousel {
-  width: 100% !important;
+  width: 90% !important;
+  max-width: 1440px;
+  margin: 0 auto;
   margin-top: 1em;
   & img {
     height: 600px !important;
-    border-radius: 15px;
+    border-radius: 10px;
     margin: 0 auto;
   }
 }
@@ -19,7 +21,16 @@
 }
 
 @include mediaMd {
-  .home__carousel img {
-    height: 300px !important;
+  .home {
+    margin: 2em 0;
+
+    &__carousel {
+      width: 100% !important;
+      max-width: 650px;
+    }
+    &__carousel img {
+      height: 300px !important;
+      border-radius: 0;
+    }
   }
 }
